[package]
name = "rustybin"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]

[features]

default = ["server"]

server = ["rocket_contrib"]

[[bin]]
name = "rustybin"
path = "src/main.rs"

[[bin]]
name = "application"
path = "js_src/main.rs"

[target.wasm32-unknown-unknown.dependencies]
stdweb = { git = "https://github.com/koute/stdweb.git", rev = "f0206e6c0faa7871d9d27008f92f33cc82ec7046" }

[target.x86_64-unknown-linux-gnu.dependencies]
serde_json = "*"
rocket = "*"
rocket_codegen = "*"
redis = "*"
uuid = { version = "0.5.1", features = ["v4"] }
time = "*"
url = "*"

[dependencies]
serde = "*"
serde_derive = "*"
failure = "*"
failure_derive = "*"

[target.x86_64-unknown-linux-gnu.dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
optional = true
