[package]
name = "rustybin"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]

[features]

default = ["server"]

server = ["rocket_contrib"]

[[bin]]
name = "rustybin"
path = "src/main.rs"

[[bin]]
name = "application"
path = "js_src/main.rs"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies]
serde_json = "*"
rocket = "*"
rocket_codegen = "*"
redis = "*"
uuid = { version = "0.5.1", features = ["v4"] }
time = "*"
url = "*"

[dependencies]
serde = "*"
serde_derive = "*"
failure = "*"
failure_derive = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
optional = true
